--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,7 +2,7 @@
     	
 	foreach($this->messages as $msg) {
 		$arr_msg = explode(MyTabCloud_Constants::MSG_SEPARATOR, $msg);
-		echo '<div class="'.$arr_msg[0].'">'.$arr_msg[1].'</div>';
+		echo '<div class="'.$arr_msg[0].' flashmessage">'.$arr_msg[1].'</div>';
 	}
 	
 	if($this->user()) {
