--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -11,6 +11,7 @@
         <?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/smoothness/jquery-ui-1.8.11.custom.css') ?>
         <?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/mytabcloud.css') ?>
 		<?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/css3buttons.css') ?>
+		<?php $this->headLink()->appendStylesheet($this->baseUrl() . '/css/tipsy.css') ?>
         <?php $this->headLink()->appendStylesheet('http://fonts.googleapis.com/css?family=Arvo:regular,bold') ?>
         <?php echo $this->headLink(); ?>
         <!--[if lte IE 8]>
@@ -20,6 +21,7 @@
         <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery.min.js'); ?>
         <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-ui-1.8.11.custom.min.js'); ?>
         <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery.placeheld.min.js'); ?>
+        <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery.tipsy.js'); ?>
         <?php $this->javascriptHelper(); ?>
         <?php echo $this->headScript(); ?>
         
