Image tabs with GD

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -57,16 +57,16 @@
 		<div class="footer">
 			<div class="container">
 				<div class="span-8">
-			        <h3 style="font-family:'Arvo';color:#d3b397;">Tabber</h3>
+			        <h3>Tabber</h3>
 					<p>About</p>
 					<p>Terms of service</p>
 			    </div>
 			    <div class="span-8">
-			        <h3 style="font-family:'Arvo';color:#d3b397;">Help</h3>
+			        <h3>Help</h3>
 					<p>F.A.Q.</p>
 			    </div>
 			    <div class="span-8 last">
-			        <h3 style="font-family:'Arvo';color:#d3b397;">Contact</h3>
+			        <h3>Contact</h3>
 					<p>Contact us</p>
 					<p>Follow us</p>
 			    </div>
